# Space-Race

./: .gitignore  .gitmodules  CMakeLists.txt
Resources/Environments/: test.json
src/: CMakeLists.txt  Properties.cpp  Properties.hpp  main.cpp
src/Entities/: CMakeLists.txt  ControllableEntity.cpp  ControllableEntity.hpp  Entity.cpp  Entity.hpp  EntityController.hpp  EntityMotion.hpp
src/Entities/Controllers/: CMakeLists.txt  PlayerController.cpp  PlayerController.hpp
src/Entities/MotionTypes/: CMakeLists.txt  OrbitalMotion.cpp  OrbitalMotion.hpp  PhysicsMotion.cpp  PhysicsMotion.hpp
src/Environment/: Background.cpp  Background.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp
src/Environment/Backgrounds/: BackgroundElementGenerator.cpp  BackgroundElementGenerator.hpp  CMakeLists.txt  ElementGeneratorFactory.cpp  ElementGeneratorFactory.hpp  RandomElementGenerator.cpp  RandomElementGenerator.hpp  SpacedElementGenerator.cpp  SpacedElementGenerator.hpp
src/Media/: Animation.cpp  Animation.hpp  CMakeLists.txt  GraphicsWrapper.cpp  GraphicsWrapper.hpp  Playlist.cpp  Playlist.hpp  SoundEngine.cpp  SoundEngine.hpp
src/Util/: AngularVector.hpp  BinaryFile.cpp  BinaryFile.hpp  CMakeLists.txt  File.cpp  File.hpp  JsonFile.cpp  JsonFile.hpp  ResourcePool.cpp  ResourcePool.hpp  ResourceTypes.hpp  Schemas.cpp  Schemas.hpp  Timer.cpp  Timer.hpp  UUID.hpp  Util.cpp  Util.hpp
src/Util/JSON/: CMakeLists.txt  JsonLoader.cpp  JsonLoader.hpp  JsonSchema.cpp  JsonSchema.hpp  JsonTypes.cpp  JsonTypes.hpp  SchemaTypes.cpp  SchemaTypes.hpp
(+2 files in other folders)
