target_sources(SpaceRace PUBLIC
    AngularVector.hpp
    BinaryFile.hpp
    BinaryFile.cpp
    JsonFile.hpp
    JsonFile.cpp
    ResourcePool.hpp
    ResourcePool.cpp
    ResourceTypes.hpp
    Schemas.hpp
    Schemas.cpp
    Timer.hpp
    Timer.cpp
    Util.hpp
    Util.cpp
    UUID.hpp
)

add_subdirectory(JSON)